add imagepicker package

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,8 @@ dependencies:
   cupertino_icons: ^0.1.2
 
   http: 0.12.0+2
-  
+  image_picker:
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
