--- a/.gitignore
+++ b/.gitignore
@@ -117,3 +117,5 @@ build/
 !**/ios/**/default.pbxuser
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+
+lib/projectSettings.dart
