--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-
+  flutter_redux: ^0.5.3
+  redux_thunk: '0.2.1'
   http: 0.12.0+2
   image_picker:
 
