--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   http: 0.12.0+2
   image_picker:
   material_search: ^0.2.8
+  cached_network_image: ^1.1.0
 
 dev_dependencies:
   flutter_test:
