--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   image_picker:
   material_search: ^0.2.8
   cached_network_image: ^1.1.0
+  unicorndial: ^1.1.5
 
 dev_dependencies:
   flutter_test:
