--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   cached_network_image: ^1.1.0
   unicorndial: ^1.1.5
   datetime_picker_formfield: ^0.1.8
+  google_maps_flutter: ^0.5.21
+  redux_persist: ^0.8.2
+  path_provider: ^1.3.0
 
 
 dev_dependencies:
