--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   google_maps_flutter: ^0.5.21
   redux_persist: ^0.8.2
   path_provider: ^1.3.0
+  flutter_google_places: ^0.2.3
+  google_maps_webservice: ^0.0.14
+  geocoder: ^0.2.1
 
 
 dev_dependencies:
