--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,9 @@ dependencies:
   flutter_google_places: ^0.2.3
   google_maps_webservice: ^0.0.14
   geocoder: ^0.2.1
-
+  dropdownfield: 1.0.0
+  toast: ^0.1.5
+  validate: ^1.7.0
 
 dev_dependencies:
   flutter_test:
