--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   dropdownfield: 1.0.0
   toast: ^0.1.5
   validate: ^1.7.0
+  onesignal_flutter: ^2.0.0
 
 dev_dependencies:
   flutter_test:
