--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -73,4 +73,5 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
     implementation 'com.onesignal:OneSignal:[3.11.2, 3.99.99]'
+    implementation("com.squareup.okhttp3:okhttp:4.2.0")
 }
