--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   toast: ^0.1.5
   validate: ^1.7.0
   onesignal_flutter: ^2.0.0
+  background_fetch: ^0.2.0
 
 dev_dependencies:
   flutter_test:
